# ai-coding-ok-cc-demo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  project-metadata.yml
.github/agent/: coding-standards.md  prompt-templates.md  system-prompt.md  workflows.md
.github/agent/memory/: decisions-log.md  project-memory.md  task-history.md
.github/workflows/: ci.yml  memory-check.yml
docs/: ai-coding-ok-guide.md  development.md
src/: config.py  database.py  main.py  models.py  services.py
src/api/: expenses.py
src/models/: expense.py
src/routers/: todos.py
src/schemas/: expense.py
src/services/: expense_service.py
src/templates/: base.html  dashboard.html  index.html  stats.html
static/: index.html
tests/: conftest.py  test_api.py  test_services.py
tests/integration/: test_api.py
tests/unit/: test_expense_service.py
